@@ -298,7 +298,7 @@ compiler.options.defines=\
 compiler.options.defines.selected=
 compiler.options.warning.buttons=0 0 1 1 0 1 0 0 0 0 0 0 0 1 0 0 
 compiler.options.optimize.buttons=1 0 0 0 
-compiler.options.other.buttons=1 0 
+compiler.options.other.buttons=1 1 
 compiler.options.other.c.flags=
 compiler.options.other.l.flags=
 compiler.options.other.l.libs=
